week12/serviceMesh/gin-server-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
    - name: http-service1
      port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: gin-server-8081

---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - name: http-service2
      port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    app: gin-server-8082
---
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  ports:
    - name: http-service3
      port: 80
      protocol: TCP
      targetPort: 8083
  selector:
    app: gin-server-8083
